[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/MainScreen/MainScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/TitleBackground/TitleBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://shared/img/logo.png" type="Texture" id=3]
[ext_resource path="res://UI/SceneFade/SceneFade.tscn" type="PackedScene" id=4]
[ext_resource path="res://shared/audio/bgm/one_man_symphony_wake_up.ogg" type="AudioStream" id=5]
[ext_resource path="res://shared/themes/menu_theme.tres" type="Theme" id=6]
[ext_resource path="res://shared/img/tf-logo.png" type="Texture" id=7]
[ext_resource path="res://shared/themes/button_bg.png" type="Texture" id=8]
[ext_resource path="res://shared/themes/button_bg_hover.png" type="Texture" id=9]
[ext_resource path="res://shared/themes/button_bg_down.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "logo_fade_in"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("MenuPanel/Menu/MarginContainer/Logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuPanel/Menu/MarginContainer/Logo:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 120 ), Vector2( 0, 120 ), Vector2( 0, 80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fader:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MenuPanel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 0 ), Vector2( 100, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MenuPanel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MenuPanel:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ -149.0 ]
}
bgm_music = ExtResource( 5 )

[node name="TitleBackground" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "logo_fade_in"
anims/logo_fade_in = SubResource( 1 )

[node name="MenuPanel" type="PanelContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.0142857 )
anchor_bottom = 1.0
margin_left = 50.7143
margin_right = 430.714
rect_min_size = Vector2( 380, 720 )
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="MenuPanel"]
margin_left = 2.0
margin_right = 378.0
margin_bottom = 720.0

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel/Menu"]
margin_right = 376.0
margin_bottom = 180.0
custom_constants/margin_top = 80

[node name="Logo" type="TextureRect" parent="MenuPanel/Menu/MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 80.0
margin_right = 376.0
margin_bottom = 180.0
rect_min_size = Vector2( 300, 100 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="MenuPanel/Menu"]
margin_top = 184.0
margin_right = 376.0
margin_bottom = 588.0
size_flags_vertical = 3

[node name="Menu" type="VBoxContainer" parent="MenuPanel/Menu/CenterContainer"]
margin_left = 63.0
margin_top = 142.0
margin_right = 313.0
margin_bottom = 262.0
rect_min_size = Vector2( 250, 0 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayDemo" type="TextureButton" parent="MenuPanel/Menu/CenterContainer/Menu"]
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
size_flags_horizontal = 3
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="MenuPanel/Menu/CenterContainer/Menu/PlayDemo"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Play Demo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="MenuPanel/Menu/CenterContainer/Menu"]
margin_top = 70.0
margin_right = 250.0
margin_bottom = 120.0
rect_min_size = Vector2( 150, 50 )
size_flags_horizontal = 3
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="MenuPanel/Menu/CenterContainer/Menu/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Footer" type="CenterContainer" parent="MenuPanel/Menu"]
margin_top = 592.0
margin_right = 376.0
margin_bottom = 720.0

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel/Menu/Footer"]
margin_left = 91.0
margin_top = 12.0
margin_right = 284.0
margin_bottom = 116.0
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FooterVbox" type="VBoxContainer" parent="MenuPanel/Menu/Footer/MarginContainer"]
margin_right = 193.0
margin_bottom = 74.0
custom_constants/separation = 4

[node name="TfLogo" type="TextureRect" parent="MenuPanel/Menu/Footer/MarginContainer/FooterVbox"]
margin_right = 193.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DevDocsLink" type="LinkButton" parent="MenuPanel/Menu/Footer/MarginContainer/FooterVbox"]
margin_top = 78.0
margin_right = 193.0
margin_bottom = 98.0
text = "https://docs.bestia-game.net"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fader" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneFade" parent="." instance=ExtResource( 4 )]
visible = false
fade_duration_ms = 1500
fade_direction = 1
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="MenuPanel/Menu/CenterContainer/Menu/PlayDemo" to="." method="_on_PlayDemo_pressed"]
[connection signal="pressed" from="MenuPanel/Menu/CenterContainer/Menu/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MenuPanel/Menu/Footer/MarginContainer/FooterVbox/DevDocsLink" to="." method="_on_DevDocsLink_pressed"]
[connection signal="fade_out_finished" from="SceneFade" to="." method="_on_SceneFade_fade_out_finished"]
